# coffer

./: .envrc  .gitignore  .gitmodules  .hlint.yaml  .weeder.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  cabal.project  cabal.project.freeze  ci.nix  coffer.cabal  coffer.nix  config.toml  default.nix  flake.nix  hie.yaml  package.yaml  pipe.nix  snapshot-stack2cabal.yaml  stack.yaml  test.toml
.buildkite/: pipeline.yml
.github/: pull_request_template.md
.github/workflows/: check.yml
.reuse/: dep5
app/: Main.hs
app/cli/: Main.hs
app/server/: Main.hs
app/swagger-api/: Main.hs
docs/: cli-backends-configuration.md  code-style.md  code_style.md  swagger.json  web-api-error-codes.md
doctests/: Doctests.hs
lib/: Backend.hs  BackendEffect.hs  BackendName.hs  Backends.hs  Config.hs  Entry.hs  Error.hs
lib/Backend/: Commands.hs  Debug.hs  Interpreter.hs  Pass.hs
lib/Backend/Vault/: Kv.hs
lib/Backend/Vault/Kv/: Internal.hs
lib/CLI/: EditorMode.hs  EntryView.hs  ParseError.hs  Parser.hs  PrettyPrint.hs  Types.hs
lib/Coffer/: Directory.hs  Instances.hs  Path.hs  PrettyPrint.hs  Util.hs
lib/Effect/: Fs.hs
lib/Entry/: Json.hs  Pass.hs
lib/Vault/: Entry.hs  Kv.hs  SecretEngine.hs
lib/Vault/Entry/: Json.hs
lib/Vault/Kv/: Internal.hs
lib/Web/: API.hs  Main.hs  Server.hs  Types.hs
nix/: sources.json  sources.json.license
scripts/: generate-cabal-files.sh  run-bats-tests.sh  validate-swagger-docs.sh
tests/api/: package-lock.json  package.json  test.js  utils.js
tests/doctests/: Doctests.hs
tests/golden/: default-config.toml  helpers.bash
tests/golden/common/: common.bats
tests/golden/copy-command/: copy-command.bats
tests/golden/create-command/: create-command.bats
tests/golden/delete-command/: delete-command.bats
tests/golden/delete-field-command/: config.toml  delete-field-command.bats
tests/golden/find-command/: find-command.bats
tests/golden/rename-command/: config.toml  rename-command.bats
tests/golden/set-field-command/: set-field-command.bats
tests/golden/tag-command/: config.toml  tag-command.bats
tests/golden/vault/: common.bats
tests/golden/view-command/: view-command.bats
tests/server-integration/: Integration.hs  Main.hs  Utils.hs  config.toml
tests/server-integration/Common/: BootServer.hs  Common.hs
tests/server-integration/CopyAndRename/: Common.hs  CopyTest.hs  RenameTest.hs
tests/server-integration/Create/: CreateTest.hs
tests/server-integration/Delete/: DeleteTest.hs
tests/server-integration/DeleteField/: DeleteFieldTest.hs
tests/server-integration/Find/: FindTest.hs
tests/server-integration/SetField/: SetFieldTest.hs
tests/server-integration/Tag/: TagTest.hs
tests/server-integration/Vault/: Common.hs
tests/server-integration/View/: ViewTest.hs
tests/test/Test/: Util.hs
tests/test/Test/CLI/: EditorMode.hs
